# matrix-server

./: .gitignore  Cargo.toml  config.toml
src/: main.rs
src/api/: check.rs  login.rs  mod.rs  recv.rs  register.rs  send.rs  user.rs
src/api/key/: get.rs  get_key.rs  mod.rs  send.rs
src/api/message/: recv.rs  send.rs
src/api/user/: check.rs  login.rs  mod.rs  register.rs  users.rs
src/config/: mod.rs
src/database/: mod.rs
src/database/engine/: mod.rs  sqlite.rs
src/database/key_value/: key.rs  message.rs  mod.rs  user.rs
src/service/: key.rs  message.rs  message_state.rs  mod.rs  services.rs  user.rs
src/service/global/: mod.rs
src/service/user/: mod.rs
src/utility/: error.rs  mod.rs
test/: request_api.py
