[package]
name = "matrix-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1.0.152", features = ["derive"] }