[package]
name = "matrix-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
figment = { version = "0.10", features = ["toml", "env", "test"] }
serde = { version = "1.0.152", features = ["derive"] }
axum-server = "0.4.6"
axum = "0.6.10"
thiserror = "1.0.39"
# matrix protocol struct
# ruma = { version = "0.4.0", features = ["client-api"] }
rusqlite ={ version="0.29.0", optional=true }
parking_lot = "0.12"
thread_local = "1.1.7"
rand = "0.8.5"
rust-argon2 = "1.0"
bincode = "1.0"

[features]
default = ["sqlite"]
sqlite = ["rusqlite"]